--- a/InventorySystem/Web.config
+++ b/InventorySystem/Web.config
@@ -89,6 +89,6 @@
   </entityFramework>
 
   <connectionStrings>
-    <add connectionString="Data Source=LENOVO-PC\SQLEXPRESS;Initial Catalog=InventoryDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" name="conn" providerName="System.Data.SqlClient"/>
+    <add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=InventoryDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" name="conn" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
