--- a/InventorySystem/packages.config
+++ b/InventorySystem/packages.config
@@ -2,10 +2,11 @@
 <packages>
   <package id="AdminLTE" version="2.4.0" targetFramework="net471" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net471" />
-  <package id="bootstrap" version="4.0.0" targetFramework="net471" />
+  <package id="bootstrap" version="3.3.7" targetFramework="net471" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net471" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net471" />
-  <package id="jQuery" version="3.3.1" targetFramework="net471" />
+  <package id="jQuery" version="3.1.1" targetFramework="net471" />
+  <package id="jQuery.Validation" version="1.8.0.1" targetFramework="net471" />
   <package id="Microsoft.ApplicationInsights" version="2.5.0" targetFramework="net471" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net471" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.5.0" targetFramework="net471" />
@@ -19,6 +20,7 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net471" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net471" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net471" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net471" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net471" />
