--- a/InventorySystem/InventorySystem.csproj
+++ b/InventorySystem/InventorySystem.csproj
@@ -448,6 +448,8 @@
     <Content Include="Views\Yonetim\Partials\KurumList.cshtml" />
     <Content Include="Views\Yonetim\Partials\BirimList.cshtml" />
     <Content Include="Views\Yonetim\BirimEkle.cshtml" />
+    <Content Include="Views\Yonetim\KurumEkle.cshtml" />
+    <Content Include="Views\Admin\SonIslemBilgisi.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
