--- a/InventorySystem/InventorySystem.csproj
+++ b/InventorySystem/InventorySystem.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\MalzemeBilgiController.cs" />
+    <Compile Include="Controllers\StokController.cs" />
     <Compile Include="Controllers\YonetimController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -450,6 +451,10 @@
     <Content Include="Views\Yonetim\BirimEkle.cshtml" />
     <Content Include="Views\Yonetim\KurumEkle.cshtml" />
     <Content Include="Views\Admin\SonIslemBilgisi.cshtml" />
+    <Content Include="Views\Stok\Index.cshtml" />
+    <Content Include="Views\Stok\Ekle.cshtml" />
+    <Content Include="Views\Stok\Detay.cshtml" />
+    <Content Include="Views\Stok\Guncelle.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
