Stok Controller Bitti

--- a/InventorySystem/InventorySystem.csproj
+++ b/InventorySystem/InventorySystem.csproj
@@ -154,6 +154,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\DagitimController.cs" />
     <Compile Include="Controllers\MalzemeBilgiController.cs" />
     <Compile Include="Controllers\StokController.cs" />
     <Compile Include="Controllers\YonetimController.cs" />
@@ -455,9 +456,12 @@
     <Content Include="Views\Stok\Ekle.cshtml" />
     <Content Include="Views\Stok\Detay.cshtml" />
     <Content Include="Views\Stok\Guncelle.cshtml" />
+    <Content Include="Views\Stok\GuncelleOnayla.cshtml" />
+    <Content Include="Views\Stok\Sil.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Dagitim\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\FontAwesome.otf" />
